# polygon-lib

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/polygon_lib/: convex_hull.hpp  geometry.hpp  point_xy.hpp  polygon.hpp
src/: convex_hull.cpp  geometry.cpp
